--- a/docs/_sass/index/heading.scss
+++ b/docs/_sass/index/heading.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .bd-heading {
   > .icon {
     font-size: $title-size;
@@ -40,11 +42,11 @@
 
     .icon {
       float: left;
-      margin-right: $block-spacing / 2;
+      margin-right: math.div($block-spacing, 2);
     }
 
     .subtitle {
-      margin: ($block-spacing / 2) 0 !important;
+      margin: (math.div($block-spacing, 2)) 0 !important;
     }
 
     form {
