--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -223,6 +223,7 @@ $navbar-breakpoint: $tablet;
 @import "./_sass/components/survey";
 @import "./_sass/components/color";
 @import "./_sass/components/pill";
+@import "./_sass/components/v1";
 
 @import "./_sass/pages/index";
 @import "./_sass/pages/docs";
