--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,9 +7,7 @@
   <body
     class="layout-{{ page.layout }}{% if page.doc-tab %} page-{{ page.doc-tab}}{% endif %}"
   >
-    {% include global/deprecated.html %}
-    {{ content }}
-    {% include global/footer.html %}
-    {% include global/scripts.html %}
+    {% include global/v1.html %} {% include global/deprecated.html %} {{ content
+    }} {% include global/footer.html %} {% include global/scripts.html %}
   </body>
 </html>
