--- a/docs/_sass/index/sponsors.scss
+++ b/docs/_sass/index/sponsors.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $bd-sponsor-padding: $block-spacing;
 $bd-sponsor-width: 12rem;
 
@@ -31,7 +33,7 @@ $bd-sponsor-width: 12rem;
   @extend %center;
   @extend %link-before-background;
 
-  padding: $bd-sponsor-padding ($bd-sponsor-padding / 2);
+  padding: $bd-sponsor-padding (math.div($bd-sponsor-padding, 2));
 
   strong,
   img {
