Fix CSS book link

--- a/docs/_includes/global/fortyfour.html
+++ b/docs/_includes/global/fortyfour.html
@@ -1,7 +1,5 @@
-<a class="bd-fortyfour" href="https://jgthms.com/css-in-44-minutes-ebook" target="_blank">
-  <p class="bd-fortyfour-label">
-    My CSS ebook
-  </p>
+<a class="bd-fortyfour" href="https://gum.co/css-44-deluxe" target="_blank">
+  <p class="bd-fortyfour-label">My CSS ebook</p>
 
   <figure class="bd-fortyfour-image">
     {%
@@ -14,9 +12,7 @@
     %}
   </figure>
 
-  <p class="bd-fortyfour-text">
-    My 44-page ebook to teach you <strong>CSS in 44 minutes</strong>
-  </p>
+  <p class="bd-fortyfour-text">My 44-page ebook to teach you <strong>CSS in 44 minutes</strong></p>
 
   <div class="bd-fortyfour-cta">
     <span class="button is-primary is-light is-rounded is-small">
