--- a/docs/_includes/global/native.html
+++ b/docs/_includes/global/native.html
@@ -1,8 +1,8 @@
 <script src="{{ site.url }}/vendor/native.js"></script>
 <script>
-  _native.init("CVAIKK3E", {
+  _native.init('CVAIKK3E', {
     targetClass: 'native-js',
-    fallback: `<a href="https://jgthms.com/css-in-44-minutes-ebook" class="native-flex" target="_blank">
+    fallback: `<a href="https://gum.co/css-44-deluxe" class="native-flex" target="_blank">
       <style>
         .native-js {
           background: linear-gradient(-30deg, #4f38a4, #a244bc 45%, #4f38a4 45%) #4f38a4;
@@ -34,7 +34,7 @@
         </div>
       </div>
       <span class="native-cta">Buy the book</span>
-    </a>`
+    </a>`,
   });
 </script>
 
