feat: update colors and fonts

--- a/style.sass
+++ b/style.sass
@@ -1,13 +1,12 @@
-@charset "utf-8";
+@charset "utf-8"
 
-$montserrat: "Montserrat", sans-serif !default
+$satoshi: "Satoshi", sans-serif !default
+$manrope: "Manrope", sans-serif !default
 
-$violet:       #772ce8 !default
-$orange-bittersweet: hsl(11, 94%, 68%) !default
-$darker-purple: hsl(326, 72%, 11%) !default
-$primary: $violet !default
-$family-primary: $montserrat !default
-$family-secondary: $montserrat !default
+$green: #2BFF8F !default
+$primary: $green !default
+$family-primary: $satoshi !default
+$family-secondary: $manrope !default
 $white-ter:    hsla(0, 0%, 96%, 1) !default
 $white-bis:    hsl(0, 0%, 98%) !default
 
@@ -17,9 +16,9 @@ $text-invert: findColorInvert($text) !default
 $text-light: $white-ter !default
 $text-strong: $white-bis !default
 
-$background: #0e0e10 !default
-$background-bis: hsl(210, 20%,  18%) !default
-$background-ter: hsl(210, 20%,  20%) !default
+$background: #121113 !default
+$background-bis: linear-gradient(0deg, #212024, #212024) !default
+$background-ter: linear-gradient(0deg, #333136, #333136) !default
 
 $table-background-color: $background-ter !default
 $scheme-main: $background !default
@@ -27,8 +26,8 @@ $scheme-main-bis: $background-bis !default
 $scheme-main-ter: $background-ter !default
 
 
-$table-container-max-height: 400px;
-$table-header-bg-color: white;
+$table-container-max-height: 400px
+$table-header-bg-color: white
 
 
 .tableFixHead
@@ -37,7 +36,7 @@ $table-header-bg-color: white;
 
   thead th
     position: sticky
-    top: 0px
+    top: 0
 
 table
   border-collapse: collapse
@@ -50,5 +49,5 @@ th, td
 th
   background: $background-ter
 
-@import "./bulma";
+@import "./bulma"
 
