Add v1 beta link

--- a/docs/_sass/components/v1.scss
+++ b/docs/_sass/components/v1.scss
@@ -7,6 +7,7 @@
   z-index: 100;
 }
 
+.v1-main,
 .v1-banner,
 .v1-modal {
   background: conic-gradient(
@@ -93,4 +94,60 @@
   .v1-banner {
     flex-wrap: nowrap;
   }
+
+  .v1-title {
+    font-size: 2em;
+  }
+}
+
+.v1-main {
+  padding: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+
+  > div {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    max-width: 24em;
+    width: 100%;
+  }
+
+  form {
+    background-color: #fff;
+    padding: 1.5em;
+    border-radius: 0.5em;
+    width: 100%;
+  }
+
+  .button {
+    background: radial-gradient(
+      219.67% 183.43% at 13.27% 123.96%,
+      #050637 0%,
+      #0033c6 16.24%,
+      #00368b 34.3%,
+      #5e07bf 53.58%,
+      #c428ac 71.9%,
+      #fe6567 86.15%,
+      #fd8644 100%
+    );
+
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1),
+      0px 2px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
+    border: none;
+    font-weight: 500;
+    display: flex;
+    width: 100%;
+  }
+}
+
+.v1-tsp {
+  margin-top: 1em;
+  font-size: 0.75em;
+  opacity: 0.5;
 }
