--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -16847,6 +16847,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   z-index: 100;
 }
 
+.v1-main,
 .v1-banner,
 .v1-modal {
   background: conic-gradient(from 180deg at 50% 50%, #040435 0deg, #430677 60.0000017881deg, #b61bbd 97.5000035763deg, #fe5c65 149.9999964237deg, #ff896f 179.7256743908deg, #fc8433 209.5121526718deg, #fd8d4d 226.2606167793deg, #f45b10 244.5819711685deg, #ad267d 279.1821026802deg, #4b1acd 300.7368063927deg, #004e9c 319.7864770889deg, #003773 338.803768158deg, #040435 360deg);
@@ -16917,7 +16918,48 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   .v1-banner {
     flex-wrap: nowrap;
   }
+  .v1-title {
+    font-size: 2em;
+  }
 }
+.v1-main {
+  padding: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.v1-main > div {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  max-width: 24em;
+  width: 100%;
+}
+.v1-main form {
+  background-color: #fff;
+  padding: 1.5em;
+  border-radius: 0.5em;
+  width: 100%;
+}
+.v1-main .button {
+  background: radial-gradient(219.67% 183.43% at 13.27% 123.96%, #050637 0%, #0033c6 16.24%, #00368b 34.3%, #5e07bf 53.58%, #c428ac 71.9%, #fe6567 86.15%, #fd8644 100%);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1), 0px 2px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
+  border: none;
+  font-weight: 500;
+  display: flex;
+  width: 100%;
+}
+
+.v1-tsp {
+  margin-top: 1em;
+  font-size: 0.75em;
+  opacity: 0.5;
+}
+
 :root {
   --bd-index-vertical: 1.5rem;
   --bd-index-gap: 3rem;
