--- a/docs/_sass/components/v1.scss
+++ b/docs/_sass/components/v1.scss
@@ -118,11 +118,27 @@
     width: 100%;
   }
 
+  .v1-content {
+    background-color: #f9f9f9;
+    font-size: 0.875em;
+    margin: -1.5rem -1.5rem 1.5rem;
+    padding: 1.5rem;
+    color: #666;
+    box-shadow: inset 0 -1em 1em rgba(0, 0, 0, 0.1);
+
+    ul {
+      margin-left: 1.5em;
+      margin-top: 0.5em;
+      list-style: disc;
+    }
+  }
+
   form {
     background-color: #fff;
     padding: 1.5em;
     border-radius: 0.5em;
     width: 100%;
+    overflow: hidden;
   }
 
   .button {
