--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -16939,11 +16939,25 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   max-width: 24em;
   width: 100%;
 }
+.v1-main .v1-content {
+  background-color: #f9f9f9;
+  font-size: 0.875em;
+  margin: -1.5rem -1.5rem 1.5rem;
+  padding: 1.5rem;
+  color: #666;
+  box-shadow: inset 0 -1em 1em rgba(0, 0, 0, 0.1);
+}
+.v1-main .v1-content ul {
+  margin-left: 1.5em;
+  margin-top: 0.5em;
+  list-style: disc;
+}
 .v1-main form {
   background-color: #fff;
   padding: 1.5em;
   border-radius: 0.5em;
   width: 100%;
+  overflow: hidden;
 }
 .v1-main .button {
   background: radial-gradient(219.67% 183.43% at 13.27% 123.96%, #050637 0%, #0033c6 16.24%, #00368b 34.3%, #5e07bf 53.58%, #c428ac 71.9%, #fe6567 86.15%, #fd8644 100%);
