Update form copy

--- a/docs/_sass/components/v1.scss
+++ b/docs/_sass/components/v1.scss
@@ -160,6 +160,13 @@
     display: flex;
     width: 100%;
   }
+
+  .label em {
+    font-style: normal;
+    font-weight: normal;
+    opacity: 0.5;
+    font-size: 0.875em;
+  }
 }
 
 .v1-tsp {
