--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -16918,7 +16918,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   .v1-banner {
     flex-wrap: nowrap;
   }
-  .v1-title {
+  .v1-main .v1-title {
     font-size: 2em;
   }
 }
