--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -120,7 +120,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
   // Add a keyboard event to close all modals
   document.addEventListener('keydown', (event) => {
-    if (event.code === 'Escape') {
+    if(e.key === "Escape") {
       closeAllModals();
     }
   });
