Fix broken image

--- a/docs/_includes/global/side-sponsor.html
+++ b/docs/_includes/global/side-sponsor.html
@@ -1,27 +1,14 @@
 <div class="bd-side-sponsrs">
-  <p class="bd-side-sponsor-label">
-    Sponsors
-  </p>
+  <p class="bd-side-sponsor-label">Sponsors</p>
 
-  <a class="bd-side-sponsor" href="https://runpondr.com/" target="_blank" rel="nofollow">
+  <a class="bd-side-sponsor" href="https://password.link/" target="_blank">
     {%
       include elements/responsive-image.html
-      path="amis/pondr"
+      path="amis/passwordlink"
       extension="png"
-      alt="Pondr"
-      width="126"
-      height="38"
-    %}
-  </a>
-
-  <a class="bd-side-sponsor" href="https://aussiecasinohex.com/" target="_blank" rel="nofollow">
-    {%
-      include elements/responsive-image.html
-      path="amis/aussiecasinohex"
-      extension="png"
-      alt="AussieCasinoHEX.com"
-      width="170"
-      height="60"
+      alt="Password.link"
+      width="332"
+      height="96"
     %}
   </a>
 </div>
