Fix website transfer includes

--- a/docs/_includes/global/header.html
+++ b/docs/_includes/global/header.html
@@ -4,14 +4,12 @@
   </a>
 
   <nav id="js-nav" class="bd-nav">
-    {% for link_id in site.data.links.navbar %}
-      {% include global/nav-item.html link_id=link_id %}
-    {% endfor %}
+    {% for link_id in site.data.links.navbar %} {% include global/nav-item.html
+    link_id=link_id %} {% endfor %}
 
     <div class="bd-nav-icons">
-      {% for link_id in site.data.links.navbar_icons %}
-        {% include global/nav-item.html link_id=link_id %}
-      {% endfor %}
+      {% for link_id in site.data.links.navbar_icons %} {% include
+      global/nav-item.html link_id=link_id %} {% endfor %}
 
       <button class="bd-nav-item is-search is-icon">
         <span class="icon">
@@ -19,20 +17,27 @@
         </span>
       </button>
 
-      <button class="bd-nav-item is-icon is-ellipsis js-burger" data-target="js-more">
+      <button
+        class="bd-nav-item is-icon is-ellipsis js-burger"
+        data-target="js-more"
+      >
         <span class="icon">
           <i class="fa-solid fa-ellipsis fa-lg"></i>
         </span>
       </button>
 
       <div id="js-more" class="bd-nav-menu is-more js-menu">
-        {% for link_id in site.data.links.navbar_more %}
-          {% include global/nav-item.html link_id=link_id %}
-        {% endfor %}
+        {% for link_id in site.data.links.navbar_more %} {% include
+        global/nav-item.html link_id=link_id %} {% endfor %}
       </div>
     </div>
 
-    <a class="button is-primary bd-nav-mobile-download"> Download </a>
+    <a
+      class="button is-primary bd-nav-mobile-download"
+      href="{{ site.data.meta.download }}"
+    >
+      Download
+    </a>
   </nav>
 
   <div class="bd-nav-themes">
@@ -53,21 +58,33 @@
     </button>
 
     <div id="js-themes" class="bd-nav-menu is-cycles js-menu js-themes">
-      <button data-scheme="light" class="bd-nav-item is-sun" aria-label="Light mode">
+      <button
+        data-scheme="light"
+        class="bd-nav-item is-sun"
+        aria-label="Light mode"
+      >
         <span class="icon">
           <i class="fas fa-sun" aria-hidden="true"></i>
         </span>
         <span>Light</span>
       </button>
 
-      <button data-scheme="dark" class="bd-nav-item is-moon" aria-label="Dark mode">
+      <button
+        data-scheme="dark"
+        class="bd-nav-item is-moon"
+        aria-label="Dark mode"
+      >
         <span class="icon">
           <i class="fas fa-moon" aria-hidden="true"></i>
         </span>
         <span>Dark</span>
       </button>
 
-      <button data-scheme="system" class="bd-nav-item is-system" aria-label="System mode">
+      <button
+        data-scheme="system"
+        class="bd-nav-item is-system"
+        aria-label="System mode"
+      >
         <span class="icon">
           <i class="fas fa-display" aria-hidden="true"></i>
         </span>
@@ -76,19 +93,27 @@
     </div>
   </div>
 
-  <div class="bd-nav-search">
-    <button class="bd-nav-item is-search-desktop is-icon js-burger" data-target="js-search">
+  <div class="bd-nav-search is-hidden">
+    <button
+      class="bd-nav-item is-search-desktop is-icon js-burger"
+      data-target="js-search"
+    >
       <span class="icon">
         <i class="fa-solid fa-magnifying-glass fa-lg"></i>
       </span>
     </button>
 
     <div id="js-search" class="bd-nav-menu is-search js-menu">
-      <input id="form-search" class="input" type="text" placeholder="Search">
+      <input id="form-search" class="input" type="text" placeholder="Search" />
     </div>
   </div>
 
-  <a class="button is-primary bd-nav-desktop-download"> Download </a>
+  <a
+    class="button is-primary bd-nav-desktop-download"
+    href="{{ site.data.meta.download }}"
+  >
+    Download
+  </a>
 
   <button class="navbar-burger bd-nav-burger js-burger" data-target="js-nav">
     <span></span>
