--- a/docs/_includes/home/intro.html
+++ b/docs/_includes/home/intro.html
@@ -108,13 +108,14 @@
   <div class="bd-home-intro-body">
     <div class="bd-home-intro-content">
       <h1 class="bd-home-title js-animated">
-        The Modern<br>
+        The Modern<br />
         CSS Framework
       </h1>
 
       <p class="bd-home-tagline">
-        Bulma is a free, open source framework that provides ready-to-use frontend components that you can easily
-        combine to build responsive web interfaces.
+        Bulma is a free, open source framework that provides ready-to-use
+        frontend components that you can easily combine to build responsive web
+        interfaces.
       </p>
 
       <span class="thing bd-home-knowledge">
@@ -123,13 +124,16 @@
       </span>
 
       <div class="bd-home-buttons buttons is-centered">
-        <span class="button is-primary">
+        <a
+          class="button is-primary"
+          href="{{ site.url }}{{ site.data.meta.documentation }}"
+        >
           <strong>Get Started</strong>
-        </span>
+        </a>
 
-        <span class="button">
+        <a class="button" href="{{ site.data.meta.download }}">
           <strong>Download</strong>
-        </span>
+        </a>
       </div>
 
       <div class="bd-home-features things">
