--- a/docs/_includes/website/carbon.html
+++ b/docs/_includes/website/carbon.html
@@ -1,5 +1,5 @@
 <div id="carboncontainer" class="bd-carbon">
   <div id="carbon">
-    <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CWYIE237&placement=bulmaio&format=cover&ignore=yes" id="_carbonads_js"></script>
+    <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CWYIE237&placement=bulmaio&format=cover" id="_carbonads_js"></script>
   </div>
 </div>
