--- a/docs/_includes/docs/menu-heading.html
+++ b/docs/_includes/docs/menu-heading.html
@@ -1,6 +1,8 @@
 <h3 class="bd-menu-heading js-menu-heading">
-  <span class="icon">
-    <i class="{{ include.icon }}"></i>
-  </span>
+  {% if include.icon %}
+    <span class="icon">
+      <i class="{{ include.icon }}"></i>
+    </span>
+  {% endif %}
   <strong>{{ include.label }}</strong>
 </h3>
