--- a/docs/_sass/docs/menu.scss
+++ b/docs/_sass/docs/menu.scss
@@ -170,3 +170,13 @@
   font-weight: inherit;
   line-height: 1.25rem;
 }
+
+.bd-side-sponsor {
+  display: flex;
+  margin: 0.5rem;
+  margin-top: 0;
+
+  img {
+    border-radius: 0.75rem;
+  }
+}
