--- a/docs/_sass/home/intro.scss
+++ b/docs/_sass/home/intro.scss
@@ -63,16 +63,9 @@ $delay: 0.2s;
   animation-delay: $delay * 2;
   animation-name: anim-slow-intro;
   align-self: center;
-  background-color: cv.getVar("scheme-main");
-  border-color: cv.getVar("success-80");
-  box-shadow: 0px 0.25em 0.5em 0px
-    hsla(
-      cv.getVar("success-h"),
-      cv.getVar("success-s"),
-      cv.getVar("success-l"),
-      0.08
-    );
-  color: cv.getVar("success-40");
+  background-color: cv.getVar("success-soft");
+  border: none;
+  color: cv.getVar("success");
   font-size: calc(var(--scale) * 1.25em);
   transform-origin: center;
 
