--- a/docs/_includes/docs/elements/responsive-image.html
+++ b/docs/_includes/docs/elements/responsive-image.html
@@ -1,8 +1,7 @@
 <img
-  src="{{ site.url }}/images/{{ include.path }}.{{ include.extension }}"
-  srcset="{{ site.url }}/images/{{ include.path }}.{{ include.extension }} 1x,
-          {{ site.url }}/images/{{ include.path }}@2x.{{ include.extension }} 2x,
-          {{ site.url }}/images/{{ include.path }}@3x.{{ include.extension }} 3x"
+  src="{{ site.url }}/assets/images/{{ include.path }}.{{ include.extension }}"
+  srcset="{{ site.url }}/assets/images/{{ include.path }}.{{ include.extension }} 1x,
+          {{ site.url }}/assets/images/{{ include.path }}@2x.{{ include.extension }} 2x"
   alt="{{ include.alt }}"
   width="{{ include.width }}"
   height="{{ include.height }}">
