--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -34941,10 +34941,9 @@ has-background-moon.is-hoverable:active {
   animation-delay: 0.4s;
   animation-name: anim-slow-intro;
   align-self: center;
-  background-color: var(--bulma-scheme-main);
-  border-color: var(--bulma-success-80);
-  box-shadow: 0px 0.25em 0.5em 0px hsla(var(--bulma-success-h), var(--bulma-success-s), var(--bulma-success-l), 0.08);
-  color: var(--bulma-success-40);
+  background-color: var(--bulma-success-soft);
+  border: none;
+  color: var(--bulma-success);
   font-size: calc(var(--scale) * 1.25em);
   transform-origin: center;
 }
@@ -36852,6 +36851,15 @@ has-background-moon.is-hoverable:active {
   font-size: 0.875em;
   font-weight: inherit;
   line-height: 1.25rem;
+}
+
+.bd-side-sponsor {
+  display: flex;
+  margin: 0.5rem;
+  margin-top: 0;
+}
+.bd-side-sponsor img {
+  border-radius: 0.75rem;
 }
 
 .bd-notification {
