Fix broken logo links in /brand/

--- a/docs/_includes/docs/components/logos-item.html
+++ b/docs/_includes/docs/components/logos-item.html
@@ -11,10 +11,10 @@
   <div class="bd-logos-download">
     <div class="has-text-centered">
       <div class="buttons are-centered">
-        <a class="button is-primary is-light is-small" href="{{ site.url }}/assets/{{ include.asset }}.png">
+        <a class="button is-primary is-light is-small" href="{{ site.url }}/assets/brand/{{ include.asset }}.png">
           PNG
         </a>
-        <a class="button is-primary is-light is-small" href="{{ site.url }}/assets/{{ include.asset }}.svg">
+        <a class="button is-primary is-light is-small" href="{{ site.url }}/assets/brand/{{ include.asset }}.svg">
           SVG
         </a>
       </div>
