Switch to Font Awesome 5

--- a/docs/_includes/about/author.html
+++ b/docs/_includes/about/author.html
@@ -4,7 +4,7 @@
 
 <div class="bd-footer-iframe">
   <a href="https://twitter.com/jgthms" class="button is-twitter" data-related="jgthms:Creator of Bulma">
-    <span class="icon"><i class="fa-brands fa-twitter"></i></span>
+    <span class="icon"><i class="fab fa-twitter"></i></span>
     <span>Follow @jgthms</span>
   </a>
 </div>
