--- a/docs/_includes/about/share.html
+++ b/docs/_includes/about/share.html
@@ -4,12 +4,12 @@
 
 <div class="bd-footer-iframe">
   <a href="https://twitter.com/share" class="button is-twitter" data-text="{{ site.data.meta.title }}" data-url="{{ site.url }}" data-count="horizontal" data-via="jgthms" data-related="jgthms:Creator of Bulma">
-    <span class="icon"><i class="fa-brands fa-twitter"></i></span>
+    <span class="icon"><i class="fab fa-twitter"></i></span>
     <span>Twitter</span>
   </a>
 
   <a class="button is-facebook" href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fbulma.io">
-    <span class="icon"><i class="fa-brands fa-facebook"></i></span>
+    <span class="icon"><i class="fab fa-facebook"></i></span>
     <span>Facebook</span>
   </a>
 </div>
