--- a/docs/_includes/docs/components/variables.html
+++ b/docs/_includes/docs/components/variables.html
@@ -10,21 +10,21 @@
       <tr>
         <th>
           <div class="icon-text">
-            <span class="icon has-text-sass"><i class="fa-brands fa-sass"></i></span>
+            <span class="icon has-text-sass"><i class="fab fa-sass"></i></span>
             <span>Sass Variable</span>
           </div>
         </th>
         {% unless include.hide_css_vars %}
           <th>
             <div class="icon-text">
-              <span class="icon has-text-link"><i class="fa-brands fa-css3"></i></span>
+              <span class="icon has-text-link"><i class="fab fa-css3"></i></span>
               <span>CSS Variable</span>
             </div>
           </th>
         {% endunless %}
         <th>
           <div class="icon-text">
-            <span class="icon has-text-success"><i class="fa-solid fa-code"></i></span>
+            <span class="icon has-text-success"><i class="fas fa-code"></i></span>
             <span>Value</span>
           </div>
         </th>
