--- a/docs/_includes/docs/hero.html
+++ b/docs/_includes/docs/hero.html
@@ -1,12 +1,12 @@
 <section class="bd-hero is-{{ include.variant }}">
   <div class="bd-hero-body">
-    <h1 class="bd-hero-title">
+    <h1 class="bd-hero-title algolia-lvl0">
       {{ include.title }}
     </h1>
 
     <hr class="bd-hr">
 
-    <h2 class="bd-hero-subtitle">
+    <h2 class="bd-hero-subtitle algolia-lvl1">
       {{ include.subtitle }}
     </h2>
 
