--- a/docs/_includes/docs/menu-link.html
+++ b/docs/_includes/docs/menu-link.html
@@ -20,7 +20,7 @@
 
   {% if include.has_sublist %}
     <span class="icon is-small">
-      <i class="fa-solid fa-angle-right"></i>
+      <i class="fas fa-angle-right"></i>
     </span>
   {% endif %}
 </a>
