--- a/docs/_includes/docs/menu.html
+++ b/docs/_includes/docs/menu.html
@@ -1,26 +1,26 @@
 <div class="bd-menu">
   <div class="bd-menu-section is-start">
-    {% include docs/menu-heading.html icon="fa-solid fa-arrow-right" label="Start Here" %}
+    {% include docs/menu-heading.html icon="fas fa-arrow-right" label="Start Here" %}
     {% include docs/menu-list.html category_id="start" %}
   </div>
 
   <div class="bd-menu-section is-features">
-    {% include docs/menu-heading.html icon="fa-solid fa-medal" label="Features" %}
+    {% include docs/menu-heading.html icon="fas fa-medal" label="Features" %}
     {% include docs/menu-list.html category_id="features" %}
   </div>
 
   <div class="bd-menu-section is-sass">
-    {% include docs/menu-heading.html icon="fa-brands fa-sass" label="Sass Tools" %}
+    {% include docs/menu-heading.html icon="fab fa-sass" label="Sass Tools" %}
     {% include docs/menu-list.html category_id="sass" %}
   </div>
 
   <div class="bd-menu-section is-custom">
-    {% include docs/menu-heading.html icon="fa-solid fa-palette" label="Customization" %}
+    {% include docs/menu-heading.html icon="fas fa-palette" label="Customization" %}
     {% include docs/menu-list.html category_id="customize" %}
   </div>
 
   <div class="bd-menu-section is-library">
-    {% include docs/menu-heading.html icon="fa-solid fa-code" label="CSS Library" %}
+    {% include docs/menu-heading.html icon="fas fa-code" label="CSS Library" %}
 
     {% assign columns_size = site.data.links.categories.columns | size %}
     {% assign grid_size = site.data.links.categories.grid | size %}
@@ -59,7 +59,7 @@
   </div>
 
   <div class="bd-menu-section is-utilities">
-    {% include docs/menu-heading.html icon="fa-brands fa-css3" label="CSS Helpers" %}
+    {% include docs/menu-heading.html icon="fab fa-css3" label="CSS Helpers" %}
     {% include docs/menu-list.html category_id="helpers" %}
   </div>
 
