--- a/docs/_includes/global/header.html
+++ b/docs/_includes/global/header.html
@@ -13,7 +13,7 @@
 
       <button class="bd-nav-item is-search is-icon">
         <span class="icon">
-          <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+          <i class="fas fa-search fa-lg"></i>
         </span>
       </button>
 
@@ -22,7 +22,7 @@
         data-target="js-more"
       >
         <span class="icon">
-          <i class="fa-solid fa-ellipsis fa-lg"></i>
+          <i class="fas fa-ellipsis-h fa-lg"></i>
         </span>
       </button>
 
@@ -86,25 +86,25 @@
         aria-label="System mode"
       >
         <span class="icon">
-          <i class="fas fa-display" aria-hidden="true"></i>
+          <i class="fas fa-desktop" aria-hidden="true"></i>
         </span>
         <span>System</span>
       </button>
     </div>
   </div>
 
-  <div class="bd-nav-search is-hidden">
+  <div class="bd-nav-search">
     <button
       class="bd-nav-item is-search-desktop is-icon js-burger"
       data-target="js-search"
     >
       <span class="icon">
-        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+        <i class="fas fa-search fa-lg"></i>
       </span>
     </button>
 
     <div id="js-search" class="bd-nav-menu is-search js-menu">
-      <input id="form-search" class="input" type="text" placeholder="Search" />
+      <input id="algoliaSearch" class="input" type="text" placeholder="Search" />
     </div>
   </div>
 
