--- a/docs/_includes/home/features.html
+++ b/docs/_includes/home/features.html
@@ -11,14 +11,14 @@
     {% assign href = site.data.links.by_id['features'].path %}
     {% include website/feature.html
       id="modern"
-      icon="fa-brands fa-css3 fa-xl"
+      icon="fab fa-css3 fa-xl"
       title="Modern"
       subtitle="Flexbox + Grid + CSS Variables"
       href=href %}
     {% assign href = site.data.links.by_id['customize'].path %}
     {% include website/feature.html
       id="easy"
-      icon="fa-solid fa-star-of-life fa-xl"
+      icon="fas fa-star-of-life fa-xl"
       title="Easy"
       subtitle="Download. Customize. Done."
       href=href
@@ -27,7 +27,7 @@
     {{ href }}
     {% include website/feature.html
       id="free"
-      icon="fa-brands fa-github-alt fa-xl"
+      icon="fab fa-github-alt fa-xl"
       title="Free"
       subtitle="Open Source on GitHub"
       href=href
