--- a/docs/_includes/home/intro.html
+++ b/docs/_includes/home/intro.html
@@ -119,7 +119,7 @@
       </p>
 
       <span class="thing bd-home-knowledge">
-        <span class="icon"> <i class="fa-solid fa-circle-check"></i></span>
+        <span class="icon"> <i class="fas fa-circle-check"></i></span>
         <strong>No CSS knowledge required!</strong>
       </span>
 
