--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,8 +16,15 @@
     {% include global/native.html %}
     {% include global/about.html %}
 
-    <script src="https://kit.fontawesome.com/418563224c.js" crossorigin="anonymous"></script>
     <script src="{{ site.url }}/assets/vendor/clipboard-2.0.11.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+    <script type="text/javascript"> docsearch({
+      apiKey: 'cb93c14bebd90678e789c946d95ea94d',
+      indexName: 'bulma',
+      inputSelector: '#algoliaSearch',
+      debug: false // Set debug to true if you want to inspect the dropdown
+    });
+    </script>
     <script src="{{ site.url }}/assets/javascript/main.js"></script>
   </body>
 </html>
