--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -13,7 +13,7 @@ route: documentation
   <div class="bd-docs-overlay js-toggle" data-target="js-docs"></div>
 
   <button id="js-menu-toggle" class="button bd-docs-button js-toggle" data-target="js-docs">
-    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+    <i class="fas fa-arrow-right-from-bracket"></i>
   </button>
 
   <div class="bd-docs-menu">
@@ -32,7 +32,7 @@ route: documentation
       prints=page.hero_prints
     %}
 
-    <div class="bd-docs-content">
+    <div class="bd-docs-content algolia-content">
       {% if page.markdown %}
         <div class="content">{{ content }}</div>
       {% else %}
