--- a/docs/_sass/docs/docs.scss
+++ b/docs/_sass/docs/docs.scss
@@ -121,7 +121,7 @@
       margin-left: calc(-0.5 * var(--p));
       margin-top: calc(-0.5 * var(--p));
 
-      .fa-solid {
+      .fas {
         transition-duration: cv.getVar("duration");
         transition-property: transform;
       }
@@ -159,7 +159,7 @@
     &.is-active {
       padding-left: calc(var(--menu-width) + var(--p));
 
-      .bd-docs-button .fa-solid {
+      .bd-docs-button .fas {
         transform: rotate(180deg);
       }
 
