--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -35784,7 +35784,7 @@ has-background-moon.is-hoverable:active {
     margin-left: calc(-0.5 * var(--p));
     margin-top: calc(-0.5 * var(--p));
   }
-  .bd-docs.is-fullwidth .bd-docs-button .fa-solid {
+  .bd-docs.is-fullwidth .bd-docs-button .fas {
     transition-duration: var(--bulma-duration);
     transition-property: transform;
   }
@@ -35816,7 +35816,7 @@ has-background-moon.is-hoverable:active {
   .bd-docs.is-fullwidth.is-active {
     padding-left: calc(var(--menu-width) + var(--p));
   }
-  .bd-docs.is-fullwidth.is-active .bd-docs-button .fa-solid {
+  .bd-docs.is-fullwidth.is-active .bd-docs-button .fas {
     transform: rotate(180deg);
   }
   .bd-docs.is-fullwidth.is-active .bd-docs-menu {
