--- a/docs/_includes/global/head.html
+++ b/docs/_includes/global/head.html
@@ -15,6 +15,8 @@
   {%- endif %}
 </title>
 
+  <link rel="stylesheet" href="{{ site.url }}/vendor/fontawesome-free-5.15.2-web/css/all.min.css">
+
 {% if page.fontawesome4 %}
   <link rel="stylesheet" href="{{ site.data.icons.fontawesome4 }}">
 {% endif %}
