--- a/docs/_sass/examples/custom.scss
+++ b/docs/_sass/examples/custom.scss
@@ -1,5 +1,3 @@
-@use "sass:color";
-
 // Set your brand colors
 $purple: #8a4d76;
 $pink: #fa7c91;
@@ -7,16 +5,37 @@ $brown: #757763;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
 
-// Path to Bulma's sass folder
-@use "sass" with (
+// Override global Sass variables from the /utilities folder
+@use "sass/utilities" with (
   $family-primary: '"Nunito", sans-serif',
   $grey-dark: $brown,
   $grey-light: $beige-light,
   $primary: $purple,
   $link: $pink,
-  $control-border-width: 2px,
+  $control-border-width: 2px
+);
+
+// Override Sass variables from the /form folder
+@use "sass/form" with (
   $input-shadow: none
 );
+
+// Import the components you need
+@forward "sass/base";
+@forward "sass/components/card";
+@forward "sass/components/modal";
+@forward "sass/components/navbar";
+@forward "sass/elements/button";
+@forward "sass/elements/button";
+@forward "sass/elements/icon";
+@forward "sass/elements/content";
+@forward "sass/elements/notification";
+@forward "sass/elements/progress";
+@forward "sass/elements/tag";
+@forward "sass/layout/footer";
+
+// Import the themes so that all CSS variables have a value
+@forward "sass/themes";
 
 // Import the Google Font
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
