added !default to $gap-base
It would be awesome to customize the gap behavior.

--- a/sass/helpers/gap.scss
+++ b/sass/helpers/gap.scss
@@ -7,7 +7,7 @@
 }
 
 $gaps: "gap", "column-gap", "row-gap";
-$gap-base: 0.5rem;
+$gap-base: 0.5rem !default;
 
 @each $gap in $gaps {
   @for $i from 0 through 8 {
