--- a/docs/_sass/home/amis.scss
+++ b/docs/_sass/home/amis.scss
@@ -5,27 +5,35 @@
   background-color: cv.getVar("scheme-main");
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  row-gap: 0.5rem;
+  gap: 0;
   position: relative;
   margin: 0 -1rem;
   justify-content: center;
 }
 
 .bd-ami {
+  background-color: var(--color);
   display: inline-flex;
   align-items: center;
-  border-radius: 0.25rem;
   justify-content: center;
   padding: 0.75rem;
   height: 5rem;
+  position: relative;
   vertical-align: top;
-  mix-blend-mode: luminosity;
   transition-duration: cv.getVar("duration");
-  transition-property: background-color, mix-blend-mode;
+  transition-property: background-color, transform;
+  transform-origin: center;
 
   &:hover {
-    background-color: var(--color);
-    mix-blend-mode: normal;
+    border-radius: 0.5rem;
+    transform: scale(1.2);
+    z-index: 1;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+  }
+
+  &:active {
+    transform: scale(1.15);
+    box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -39,7 +47,6 @@
 .bd-ami-footer {
   border-radius: 0.25rem;
   height: 4rem;
-  mix-blend-mode: normal;
 }
 
 .bd-ami-footer img {
