--- a/css/bulma.css
+++ b/css/bulma.css
@@ -5426,7 +5426,7 @@ button.tag:active,
 .control,
 .input,
 .textarea,
-.select select {
+.select {
   --bulma-input-h: var(--bulma-scheme-h);
   --bulma-input-s: var(--bulma-scheme-s);
   --bulma-input-l: var(--bulma-scheme-main-l);
