--- a/versions/bulma-no-dark-mode.scss
+++ b/versions/bulma-no-dark-mode.scss
@@ -9,6 +9,7 @@
 @forward "../sass/grid";
 @forward "../sass/layout";
 @forward "../sass/base/skeleton";
+@forward "../sass/helpers";
 
 @use "../sass/themes/light";
 @use "../sass/themes/setup";
